--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "react-firebase-authentication",
-  "version": "0.1.0",
+  "name": "user-profile",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.4.2",
-    "firebase": "^7.16.0",
+    "antd": "^4.6.6",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.22.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
